--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "express-custom-error": "^1.9.4",
     "has-keys": "^0.1.0",
@@ -11,6 +12,7 @@
     "mandatoryenv": "^3.0.4",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
+    "node": "^24.9.0",
     "rotating-file-stream": "^2.1.6"
   },
   "scripts": {
