--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "node": "^24.9.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-modal-image": "^2.6.0",
     "react-router-dom": "^7.9.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
