--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^7.9.3",
     "tailwind-merge": "^3.3.1",
