--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "leaflet-gpx": "^2.2.0",
     "lucide-react": "^0.544.0",
     "node": "^24.9.0",
     "react": "^19.1.1",
